--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -1,12 +1,37 @@
-# Variáveis
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: lcarvalh <lcarvalh@student.42lisboa.com    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/08/27 10:28:54 by lcarvalh          #+#    #+#              #
+#    Updated: 2025/09/23 18:42:24 by lcarvalh         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 INCLUDES = -I./includes -I./libft
 LIBFT_PATH = ./libft
 LIBFT = $(LIBFT_PATH)/libft.a
 
-SRC_DIR = ./src
-SRC = src/push_swap.c src/push.c src/swap.c src/rotate.c src/reverse.c src/utils.c
+SRC_DIR = ./src ./srcop
+SRC = push_swap.c \
+	src/ft_atol.c \
+    src/radix.c \
+    src/utils.c \
+    src/stack.c \
+    src/is_sorted.c \
+    src/parser.c \
+    src/ft_split.c \
+    src/free_split.c \
+    srcop/push.c \
+    srcop/swap.c \
+	src/sort_small.c \
+    srcop/rotate.c \
+    srcop/reverse.c
+
 OBJ = $(SRC:.c=.o)
 
 NAME = push_swap
